fixing mobile overflow

--- a/sass/partials/_helpers.sass
+++ b/sass/partials/_helpers.sass
@@ -1,6 +1,9 @@
 .element-invisible
   position: absolute !important
-  clip: rect(1px 1px 1px 1px) // IE6, IE7
+  height: 1px 
+  width: 1px 
+  overflow: hidden
+  clip: rect(1px 1px 1px 1px)
   clip: rect(1px, 1px, 1px, 1px)
 
 .element-invisible.element-focusable:active,
@@ -53,3 +56,23 @@
     opacity: 0 
   100%
     opacity: 1 
+
+.button
+  +inline-block()
+  padding: 14px 27px 14px 29px
+  white-space: nowrap
+  border-radius: 50px
+  text-align: center
+  cursor: pointer
+  font-weight: 500
+  line-height: 14px
+  letter-spacing: 1px
+  text-transform: uppercase
+  text-decoration: none
+  +font-size(14)
+  background: $white
+  border: 1px solid transparent
+  @extend .animate
+  &:hover
+    opacity: .8
+    color: $black
